test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_items/src/type_alias_decl.sw
library;

#[storage(invalid)]
#[inline(invalid)]
//! Invalid inner comment.
#[test(invalid)]
#[payable(invalid)]
#[deprecated(invalid)]
#[fallback(invalid)]
#[error_type(invalid)]
#[error(invalid)]
type MyU64 = u64;